--- a/habit-tracker-backend/src/main/resources/application.properties
+++ b/habit-tracker-backend/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=habit-tracker-backend
+
+#Security Configuration
+spring.security.user.name=yash
+spring.security.user.password=buildwithyash
 # DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/habit_tracker_db
 spring.datasource.username=root
