--- a/habit-tracker-backend/src/main/resources/application.properties
+++ b/habit-tracker-backend/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.jpa.hibernate.ddl-auto=update
+
+
+# JPA (Hibernate) Settings
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
